# sistema_bancario_novo

./: README.md  pyproject.toml
backend/: .env  alembic.ini  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 28f415d92b9b_adiciona_campos_aos_modelos.py  6c4cb49c3186_create_tables.py  71fb26edc707_create_tables.py  7fae6f0bd5ba_initial_tables.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: auth.py  cartao.py  conta.py  emprestimo.py  investimento.py  notificacao.py  pagamento.py  perfil.py  transacao.py  usuario.py
backend/app/core/: config.py  jwt.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: cartao.py  conta.py  emprestimo.py  investimento.py  notificacao.py  pagamento.py  transacao.py  usuario.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth.py  cartao.py  conta.py  emprestimo.py  investimento.py  notificacao.py  pagamento.py  transacao.py  usuario.py
backend/app/services/: user_service.py
sistema-bancario-app-react/: index.html  package-lock.json  package.json
sistema-bancario-app-react/src/: App.jsx  index.css
sistema-bancario-app-react/src/features/auth/: Login.css  Login.jsx
sistema-bancario-app-react/src/features/dashboard/: Dashboard.css  Dashboard.jsx
sistema-bancario-app-react/src/features/register/: Register.css  Register.jsx
